testing/tests/ui/expr_fn_calls.stderr
error: Unsupported use of named arguments
 --> NamedArgsInRustExprMemberFn.html:1:10
       "(arg = 5) }}"
  --> tests/ui/expr_fn_calls.rs:10:21
   |
10 | #[template(source = "{{ test_fn(arg = 5) }}", ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^

error: Unsupported use of named arguments
 --> NamedArgsInRustExprStaticCall.html:1:18
       "(arg = \"test\") }}"
  --> tests/ui/expr_fn_calls.rs:21:21
   |
21 | #[template(source = r#"{{ self::static_fn(arg = "test") }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Unsupported use of named arguments
 --> NamedArgsInRustExprStaticCall2.html:1:34
       "(arg = \"test\") }}"
  --> tests/ui/expr_fn_calls.rs:26:21
   |
26 | #[template(source = r#"{{ self::static_fn2("test").unwrap(arg = "test") }}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Unsupported use of named arguments
 --> NamedArgsInRustExprStaticCall3.html:1:29
       "(arg = \"test\") %}"
  --> tests/ui/expr_fn_calls.rs:31:21
   |
31 | #[template(source = r#"{% let test = self::static_fn(arg = "test") %}"#, ext = "html")]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
